    - No longer used by FlagWar.
  - API: DeathPriceEvents
    - NationPaysDeathPriceEvent
    - PlayerPaysDeathPriceEvent
    - TownPaysDeathPriceEvent
    - Make it possible for other plugins to manipulate the prices taken from players, towns and nations when someone dies.
  - Fix nation zones generating an error if wildernessuse isn't enabled.
0.97.2.12:
  - Add ally and enemy lists to Towns.
    - Accessible via the API only. For plugins which want to make towns war against each other.
    - Closes #3476.
  - New Command: /t allylist {townname}
    - Show allies of a town.
  - New Command: /t enemylist {townname}
    - Show enemies of a town.
  - API: Town ally/enemy events.
    - Cancellable events thrown when towns have allies or enemies added/removed.
    - TownAddAlliedTownEvent
    - TownAddEnemiedTownEvent
    - TownRemoveAlliedTownEvent
    - TownRemoveEnemiedTownEvent
  - Bump language file to 0.131.
  - Fix DeathPriceEvent missing handlers.
0.97.2.13:
  - API: Add PlayerCacheGetTownBlockStatusEvent.
    - An event which allows another plugin to dictate what TownBlockStatus will be applied to a player's cache.  
  - Fix variable name in javadoc, courtesy of Warriorrrr with PR #5419.
  - Add Government#hasActiveWar.
  - API: add TownyAPI#isPVP(Location).
  - Add closed_economy_enabled bstats chart.
0.97.2.14:
  - Add ability to add translation strings apart from the LoadTranslationEvent.
  - New Permission Node: towny.townless
    - Given to players who do not have a town.
  - Fix global messages being stripped of their colours.
  - Fix deleted nations not removing sent/received invites. 
0.97.2.15:
  - Purge EventWar from Towny codebase.
  - Implemented town and nation baltops, courtesy of Glare with #5428.
    - Adds commands to see who is the richest players in a town or nation.
    - Opens as a book for the player.
  - New Commands:
    - /town baltop {townname}
    - /nation baltop {nationame}